Fixed footer rowgap on phones

--- a/css/responsivelayout.css
+++ b/css/responsivelayout.css
@@ -76,6 +76,6 @@
         grid-template-columns: repeat(1, auto);
         grid-template-rows: repeat(4, minmax(150px, auto));
         column-gap: 2%;
-        row-gap: 16px;
+        row-gap: 32px;
     }
 }
